--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -3,6 +3,7 @@ header {
         background-color: black;        
         display: flex;
         justify-content: center;
+        align-items: center;
         padding: 20px;
         position: fixed;
         top: 0;
@@ -13,6 +14,27 @@ header {
             text-decoration: none;
             color: white;
             margin: 0 10px;
+        }
+
+        #user {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            border: 1px solid #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 5px;
+
+            i {
+                color: #fff;
+            }
+        }
+
+        span {
+            cursor: pointer;
+            margin-left: 5px;
+            color: #fff;
         }
 
     }
