--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -19,6 +19,11 @@ form {
   width: 70%;
   margin: 0 auto;
 
+  @media screen and (max-width: 900px) {
+    padding: 5%;
+    width: 90%;
+  }
+
   .title {
     color: red;
   }
@@ -31,12 +36,16 @@ form {
     margin-top: 10px;
     display: block;
     padding: 8px 12px;
-    width: 300px;
+    width: 50%;
     border-radius: 5px;
     border: 1px solid #f3f3f3;
 
     &:focus {
         border-radius: none;
+    }
+
+    @media screen and (max-width: 900px) {
+      width: 90%;
     }
   }
 
